##############################################################################
# pgAdmin III - PostgreSQL Tools
# $Id: Makefile.am 4875 2006-01-06 21:06:46Z dpage $
# Copyright (C) 2002 - 2006, The pgAdmin Development Team
# This software is released under the Artistic Licence
#
# Makefile - Makefile for *nix systems
##############################################################################

SUBDIRS = debian fc1 mac mandrake redhat slackware src suse win32

EXTRA_DIST = \
		$(srcdir)/pgadmin3.desktop
