AC_PREREQ(2.57)
AC_INIT(pgAdmin3, 0.10, pgadmin-support@postgresql.org)
AC_CONFIG_SRCDIR([pgAdmin3.cpp])
AM_CONFIG_HEADER([config.h])
AM_INIT_AUTOMAKE([pgAdmin3, 0.10])

# Checks for programs.
AC_PROG_CXX
AC_PROG_CC

# Checks for libraries.

# Checks for header files.
AC_HEADER_STDC
AC_CHECK_HEADERS([arpa/inet.h netdb.h netinet/in.h stdlib.h])

# Checks for typedefs, structures, and compiler characteristics.
AC_HEADER_STDBOOL
AC_C_CONST
AC_TYPE_SIZE_T
AC_HEADER_TIME

# Checks for library functions.
AC_FUNC_STRTOD
AC_CHECK_FUNCS([gethostbyname inet_ntoa memmove memset strchr])

CHECK_WXWINDOWS
CHECK_LIBPQ

AC_CONFIG_FILES([Makefile])
AC_OUTPUT
