#######################################################################
#
# pgAdmin3 - PostgreSQL tools
# Copyright (C) 2002 - 2008, The pgAdmin Development Team
# This software is released under the Artistic Licence
#
# $Id$
#
# CMakeLists.txt - CMake build configuration
#
#######################################################################

################################################################################
# Build rules for xtra bundles
################################################################################

ADD_SUBDIRECTORY(pgscript EXCLUDE_FROM_ALL)

