#######################################################################
#
# pgAdmin3 - PostgreSQL tools
# Copyright (C) 2002 - 2009, The pgAdmin Development Team
# This software is released under the PostgreSQL Licence
#
# $Id$
#
# CMakeLists.txt - CMake build configuration
#
#######################################################################

################################################################################
# Build rules for xtra bundles
################################################################################

ADD_SUBDIRECTORY(pgscript EXCLUDE_FROM_ALL)

