##############################################################################
# pgAdmin III - PostgreSQL Tools
# $Id: Makefile.am 4974 2006-01-30 09:25:01Z dpage $
# Copyright (C) 2002 - 2009, The pgAdmin Development Team
# This software is released under the PostgreSQL Licence
#
# Makefile - Makefile for *nix systems
##############################################################################

DIST_SUBDIRS = pgscript wx-build
SUBDIRS = wx-build

