##############################################################################
# pgAdmin III - PostgreSQL Tools
# $Id$
# Copyright (C) 2002 - 2006, The pgAdmin Development Team
# This software is released under the Artistic Licence
#
# Makefile - Makefile for *nix systems
##############################################################################

EXTRA_DIST = \
	$(srcdir)/pgadmin3.spec \
	$(srcdir)/pgadmin3.spec.in
